--- a/src/app/pages/account-profile/purchase-order/purchase-order.component.html
+++ b/src/app/pages/account-profile/purchase-order/purchase-order.component.html
@@ -1,3 +1,32 @@
-<p>
-  purchase-order works!
-</p>
+<div class="purchase-order">
+  <h3>Đơn đã mua</h3>
+  <div class="table-responsive">
+    <table class="table">
+      <thead>
+        <tr>
+          <th>STT</th>
+          <th>Thời gian</th>
+          <th>Trạng thái</th>
+          <th>Tổng tiền</th>
+          <th>Hành động</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>May 10, 2018</td>
+          <td>Processing</td>
+          <td>$25.00 for 1 item</td>
+          <td><a class="view">Chi tiết</a></td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>May 10, 2018</td>
+          <td>Processing</td>
+          <td>$17.00 for 1 item</td>
+          <td><a class="view">Chi tiết</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
