--- a/src/app/pages/account-profile/change-password/change-password.component.html
+++ b/src/app/pages/account-profile/change-password/change-password.component.html
@@ -1,3 +1,33 @@
-<p>
-  change-password works!
-</p>
+<div class="change-password">
+  <h3>Đổi mật khẩu</h3>
+  <div class="login-form-container">
+    <form [formGroup]="passwordForm" (submit)="onUpdatePassword()">
+      <div class="row">
+        <div class="form-group pb-4 col-12">
+          <label class="form-label">Mật khẩu cũ</label>
+          <input
+            type="password"
+            class="form-control"
+            formControlName="oldPassword" />
+        </div>
+        <div class="form-group pb-4 col-12">
+          <label class="form-label">Mật khẩu mới</label>
+          <input
+            type="password"
+            class="form-control"
+            formControlName="newPassword" />
+        </div>
+        <div class="form-group pb-4 col-12">
+          <label class="form-label">Nhập lại mật khẩu</label>
+          <input
+            type="password"
+            class="form-control"
+            formControlName="confirmNewPassword" />
+        </div>
+      </div>
+      <div class="button-box d-flex justify-content-end">
+        <button class="btn default-btn" type="submit">Lưu</button>
+      </div>
+    </form>
+  </div>
+</div>
