--- a/src/app/components/quick-view-product-modal/quick-view-product-modal.component.scss
+++ b/src/app/components/quick-view-product-modal/quick-view-product-modal.component.scss
@@ -76,7 +76,7 @@
     margin-right: 15px;
 
     input {
-      width: 40px;
+      width: 50px;
       height: 40px;
       border: 1px solid #ddd;
       padding: 0 0 0 10px;
@@ -121,5 +121,33 @@
 
   .product-stock-status a {
     display: inline-block;
+  }
+}
+
+.select-size-box {
+  .size-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 7px;
+  }
+
+  .select-label {
+    height: 48px;
+    border-radius: 4px;
+    font-weight: 500;
+    box-shadow: rgb(229, 229, 229) 0px 0px 0px;
+  }
+
+  .select-radio {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0;
+  }
+
+  .select-label.active {
+    box-shadow: rgb(17, 17, 17) 0px 0px 0px 1px;
   }
 }
